--- a/assets/scss/_sidebar-toc.scss
+++ b/assets/scss/_sidebar-toc.scss
@@ -4,7 +4,7 @@
 .td-sidebar-toc {
   @include link-decoration;
 
-  border-left: 1px solid $border-color;
+  border-left: 1px solid var(--bs-border-color);
 
   @supports (position: sticky) {
     position: sticky;
